# datamaite

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  README_DEV.md  pixi.toml  pyproject.toml
benchmarks/: profile_maite_adapters.py
docs/: README.md  architecture.md  conf.py  index.md  index.rst  packaging.md
docs/_static/: custom.css
docs/getting-started/: cloud-storage.md  index.md  installation.md
docs/reference/: architecture.md  cli.md  index.md  schemas.md
docs/schemas/: scale-video-playback-v1.schema.json
docs/tool-usage/: README.md  dataset_bridge_demo.ipynb  hmie_validator.ipynb
docs/tool-usage/validators/: hmie.ipynb
docs/tutorials/: HMIE_Cloud_Storage.ipynb  HMIE_Validation.ipynb  Working_with_FMV_datasets.ipynb  example-validation-report.html  index.md
scripts/: generate_mock_hmie.py
src/databridge/: __init__.py  _cache.py  _cli.py  _report.py  _stats.py  _types.py  _version.py  conversion.py  dataloader.py  flat_mp4.py  geometry.py  loaders.py  model.py  motchallenge.py  tao.py  taxonomy.py  validation.py  visdrone.py  writers.py
src/databridge/_formats/: __init__.py
src/databridge/_formats/flat_mp4/: __init__.py
src/databridge/_formats/hmie/: __init__.py  annotation_checks.py  categories.py  consistency_checks.py  discovery.py  loader.py  schema.py  video_checks.py  writer.py
src/databridge/_formats/huggingface_video_classification/: __init__.py  loader.py  writer.py
src/databridge/_formats/motchallenge/: __init__.py  writer.py
src/databridge/_formats/tao/: __init__.py  writer.py
src/databridge/_formats/visdrone/: __init__.py  writer.py
src/databridge/maite/: __init__.py  _common.py  _mot.py
src/datamaite/: __init__.py  _cache.py  _cli.py  _report.py  _stats.py  _types.py  _upath.py  _version.py  conversion.py  geometry.py  image_classification.py  loaders.py  model.py  object_detection.py  records.py  taxonomy.py  validation.py  writers.py
src/datamaite/_formats/: __init__.py  _coerce.py  _fixed_taxonomy.py
src/datamaite/_formats/coco/: __init__.py  loader.py  writer.py
src/datamaite/_formats/flat_images/: __init__.py  loader.py
src/datamaite/_formats/flat_mp4/: __init__.py  loader.py
src/datamaite/_formats/hmie/: __init__.py  annotation_checks.py  consistency_checks.py  discovery.py  frame_mapping.py  loader.py  video_checks.py  writer.py
src/datamaite/_formats/huggingface_video_classification/: __init__.py  loader.py  writer.py
src/datamaite/_formats/huggingface_vision/: __init__.py  loader.py  writer.py
src/datamaite/_formats/motchallenge/: __init__.py  loader.py  writer.py
src/datamaite/_formats/tao/: __init__.py  loader.py  writer.py
src/datamaite/_formats/visdrone/: __init__.py  loader.py  static_loader.py  static_writer.py  writer.py
src/datamaite/_formats/yolo/: __init__.py  _common.py  classification.py  loader.py  writer.py
src/datamaite/maite/: __init__.py  _common.py  _decode.py  _ic.py  _image.py  _mot.py  _od.py
tests/: README.md  _hmie_factory.py  _maite_factory.py  _scale_factory.py  conftest.py  test_cache.py  test_cache_integration.py  test_categories.py  test_checks.py  test_cli.py  test_coco_loader.py  test_coco_writer.py  test_conversion_matrix.py  test_dataloader.py  test_discovery.py  test_e2e.py  test_fixed_taxonomy.py  test_flat_images_loader.py  test_flat_mp4_loader.py  test_frame_mapping.py  test_geometry.py  test_hmie_loader.py  test_hmie_writer.py  test_huggingface_video_classification_loader.py  test_huggingface_video_classification_writer.py  test_huggingface_vision_datasets_compat.py  test_huggingface_vision_loader.py  test_huggingface_vision_writer.py  test_image_classification.py  test_image_region_crop.py  test_init.py  test_loaders.py  test_maite_consumption.py  test_maite_mot.py  test_model_maite_support.py  test_motchallenge_loader.py  test_motchallenge_writer.py  test_notebook_api.py  test_object_detection.py  test_packaging.py  (+19 more)
tests/e2e/: __init__.py  test_cloud_integration.py  test_example_data_matrix.py  test_s3_minio.py
tests/fixtures/: invalid_annotation.json  minimal_annotation.json  valid_annotation.json
tools/probe_bench/: README.md  bench.py  gen_video.py  range_server.py
