# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
# Poetry 2.x reads [project] (PEP 621) for metadata and uses its own
# backend for locking/installing. hatchling remains the wheel build backend
# for `pip install` / `uv build` / `pixi run install`.
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "databridge"
dynamic = ["version"]
description = "A unified framework for dataset loading, conversion, and quality validation."
readme = "README.md"
license = "LicenseRef-TBD"
authors = [
    { name = "OpenTeams" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10,<3.13"

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
video = [
    "opencv-python-headless>=4.8",
]
# Jupyter kernel for running the docs/tutorial notebooks. Optional so it does
# not pull the Jupyter stack into a production install.
notebook = [
    "ipykernel>=7.2,<8",
]
# MAITE interoperability (databridge.maite). Optional: core `import databridge`
# never imports these. ``numpy`` + ``av`` (PyAV) are the real runtime deps --
# they build/decode the MOT view. ``maite`` itself is NOT imported at runtime
# (BoxTrackDataset conforms to maite.protocols *structurally*); it's shipped in
# this extra for the consumer's convenience -- anyone consuming the MAITE
# surface has maite installed anyway -- and the test suite uses it to verify
# conformance (isinstance + a maite.tasks.predict round-trip).
maite = [
    "maite>=0.9,<0.10",
    "numpy>=1.24",
    "av>=11",
]
dev = [
    "pre-commit>=3.6",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "pyright>=1.1",
]

[project.scripts]
databridge = "databridge._cli:main"

[project.urls]
Repository = "https://gitlab.jatic.net/jatic/orchestration-interoperability/databridge"

[tool.hatch.build.targets.wheel]
packages = ["src/databridge"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/databridge/_version.py"

[tool.hatch.build.targets.sdist]
# docs/ excluded so customer-facing tutorial notebooks (and any saved
# cell outputs) never ship inside a distributed sdist.
exclude = [".venv", ".uv-cache", ".beads", ".pytest_cache", "artifacts", "docs"]

# ---------------------------------------------------------------------------
# Poetry (CI and docs workflow)
# ---------------------------------------------------------------------------
# Poetry 2.x reads [project] for name, version, dependencies, and python
# constraint. The [tool.poetry] section adds dependency groups and source
# configuration that [project] cannot express.
[tool.poetry]
# Version is managed by hatch-vcs from git tags; Poetry reads this
# as a fallback. The actual wheel version comes from _version.py.
version = "0.1.0"
packages = [{ include = "databridge", from = "src" }]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.6"
pytest = ">=8.0"
pytest-cov = ">=4.1"
ruff = ">=0.4"
bandit = { version = ">=1.7", extras = ["toml"] }
pyright = ">=1.1"

[tool.poetry.group.video.dependencies]
opencv-python-headless = ">=4.8"

[tool.poetry.group.maite.dependencies]
maite = ">=0.9,<0.10"
numpy = ">=1.24"
av = ">=11"

[tool.poetry.group.notebook.dependencies]
ipykernel = ">=7.2,<8"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["src/databridge/_version.py"]

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "C90",  # mccabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PD",   # pandas-vet
    "RUF",  # ruff-specific rules
    "PERF", # perflint
]
ignore = [
    "ISC001",  # conflicts with ruff format
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["databridge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=databridge",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage_report.xml",
    "--cov-fail-under=90",
    "-ra",
    "-m",
    "not real_data",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external resources",
    "real_data: marks tests that require real HMIE data on SUNet (opt-in via -m real_data)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
omit = [
    "src/databridge/conversion.py",
]

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests"]
reportMissingImports = "warning"
reportMissingTypeStubs = false

# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]
