# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
# Poetry 2.x reads [project] (PEP 621) for metadata and uses its own
# backend for locking/installing. hatchling remains the wheel build backend
# for `pip install` / `uv build` / `pixi run install`.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamaite"
# Static version: the single source of truth. Bump this on each release.
# Exposed at runtime via importlib.metadata (see src/datamaite/_version.py).
version = "0.2.1"
description = "A unified framework for dataset loading, conversion, and quality validation."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "OpenTeams" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10,<3.13"

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Task-oriented extras. Core stays lean (pydantic + numpy) and every optional
# native/media stack is pulled by the task that needs pixels.
fmv = [
    "opencv-python-headless>=4.8",
    "av>=11",
]
od = [
    "opencv-python-headless>=4.8",
]
ic = [
    "opencv-python-headless>=4.8",
]
all = [
    "opencv-python-headless>=4.8",
    "av>=11",
]
# Jupyter kernel for running the docs/tutorial notebooks. Optional so it does
# not pull the Jupyter stack into a production install.
notebook = [
    "ipykernel>=7.2",
    "jupyterlab",
]
# MAITE interoperability (datamaite.maite). Optional: core `import datamaite`
# never imports these. ``numpy`` + ``av`` (PyAV) are the real runtime deps --
# they build/decode the MOT view. ``maite`` itself is NOT imported at runtime
# (BoxTrackDataset conforms to maite.protocols *structurally*); it's shipped in
# this extra for the consumer's convenience -- anyone consuming the MAITE
# surface has maite installed anyway -- and the test suite uses it to verify
# conformance (isinstance + a maite.tasks.predict round-trip).
maite = [
    "maite>=0.9",
    "numpy>=1.24",
    "av>=11",
]
dev = [
    "pre-commit>=3.6",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "pyright>=1.1",
    "maite>=0.9,<0.10",
]
# Docs toolchain plus notebook/runtime deps. myst-nb executes tutorial
# notebooks during the Sphinx build, so their imports (cv2 / av / maite) and
# the Jupyter kernel must be present. Poetry extras cannot include other extras,
# so docs lists those runtime packages directly.
docs = [
    "maite>=0.9", # maite
    "numpy>=1.24",# maite
    "av>=11",     # maite/fmv/all
    "ipykernel>=7.2", # notebook
    "opencv-python-headless>=4.8", # fmv/od/ic/all
    "sphinx>=7.0",
    "myst-nb>=1.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-design>=0.5",          # grid/card tiles on the landing page
    "sphinxcontrib-mermaid>=0.9",  # render ```mermaid fences as diagrams
    "sphinx-autobuild>=2024.0",    # live-reload rebuild for local docs editing
]

[project.scripts]
datamaite = "datamaite._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datamaite"]

[tool.hatch.build.targets.sdist]
# docs/ excluded so customer-facing tutorial notebooks (and any saved
# cell outputs) never ship inside a distributed sdist.
exclude = [".venv", ".uv-cache", ".beads", ".pytest_cache", "artifacts", "docs"]

# ---------------------------------------------------------------------------
# Poetry (CI and docs workflow)
# ---------------------------------------------------------------------------
# Poetry 2.x reads [project] (PEP 621) for name, version, dependencies, the
# python constraint, AND optional-dependencies (exposed as Poetry extras, e.g.
# ``poetry install --extras dev``). [tool.poetry] only carries what [project]
# cannot express: the src-layout package mapping. The version is read from
# [project].version (the single source of truth).
[tool.poetry]
packages = [{ include = "datamaite", from = "src" }]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["src/datamaite/_version.py"]

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "C90",  # mccabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PD",   # pandas-vet
    "RUF",  # ruff-specific rules
    "PERF", # perflint
]
ignore = [
    "ISC001",  # conflicts with ruff format
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["datamaite"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=datamaite",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage_report.xml",
    "--cov-fail-under=90",
    "-ra",
    "-m",
    "not real_data and not integration",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external resources (opt-in via -m integration; e.g. the example-data conversion matrix, needs DATAMAITE_DATASETS_ROOT)",
    "real_data: marks tests that require real HMIE data on SUNet (opt-in via -m real_data)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
omit = [
    "src/datamaite/conversion.py",
]

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests"]
reportMissingImports = "warning"
reportMissingTypeStubs = false

# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]
